@@ -27,7 +27,11 @@ Paul Davis
 
 2009-07-17 Stephane Letz  <letz@grame.fr>
 
-	* In combined --dbus and --classic compilation ode, use PulseAudio acquire/release code.
+	* Big rewrite of Solaris boomer driver, seems to work in duplex mode at least.
+
+2009-07-17 Stephane Letz  <letz@grame.fr>
+
+	* In combined --dbus and --classic compilation code, use PulseAudio acquire/release code.
 
 2009-07-16 Stephane Letz  <letz@grame.fr>
 
